...
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:hintAnimationEnabled="true"
        app:hintEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txt_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="12"
            android:hint="@string/setup_server_address_hint"
            android:inputType="textUri"
            android:lines="1"
...

    <Space
        android:layout_width="match_parent"
        android:layout_height="32dp" />

    <Button
        android:id="@+id/btn_connect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/setup_connect" />

</LinearLayout>

