...
    <string name="library_now_playing">Playing</string>
    <string name="library_search_hint">Search…..</string>

    <string name="library_song_track_title">%d - %s</string>
    <string name="library_song_artist_album">%s - %s</string>

    <string name="setup_enter_server_address">Address is missing!</string>
    <string name="setup_check_credentials_username">Enter username!</string>
    <string name="setup_check_credentials_password">Enter password!</string>
    <string name="setup_unsupported_authentication">Unsupported authentication!</string>
    <string name="setup_malformed_url">Invalid URL!</string>
    <string name="setup_connection_error">Connection error!</string>
    <string name="setup_authentication_error">Invalid Username or Password!</string>
...
